style.scss
---
---

//
// IMPORTS
//

@import "variables";

body {
	background-color: azure;
}

.centered {
  text-align: center;
}

a {
  color: #000;
  text-decoration: none;
}

a:hover {
  color: $link-color;
  text-decoration: underline;
}

.b {
  border: 0px solid #ddd;
}

hr {
  width: 30%;
}

.container {
  margin-top: 2em;
  margin-bottom: 2em;
  max-width: 800px;
  line-height: 1.5;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 18px;

  background: #fff;
  box-sizing: border-box;
  padding: 50px 100px;

  @media screen and (max-width: 850px) {
	  margin-top: 0;
    padding: 60px 70px;
  }

  @media screen and (max-width: 650px) {
	  margin-top: 0;
    padding: 40px 50px;
  }

  @media screen and (max-width: 450px) {
	  margin-top: 0;
    padding: 30px;
  }

  @media screen and (max-width: 349px) {
	  margin-top: 0;
    padding: 15px;
  }

  text-overflow: ellipsis;
  border-radius: 10px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
}

header {
  text-align: center;
  padding: 1.5em 0;
  border-bottom: 1px solid #eee !important;

  div.site-info {
    div.site-name {
      font-size: 2.3em;
      font-weight: bold;
    }

    @media screen and (max-width: 800px) {
      div.site-name {
        font-size: 2em;
      }
    }

    p.site-description {
      font-size: 0.9em;
    }

    a {
      text-decoration: none;
    }
  }

  nav {
    margin-top: 1em;
    font-size: 0.9em;
    a {
      margin-right: 1em;
      color: $link-color;
    }
  }
}

main {
  padding: 0.5em 0;
  a {
    color: $link-color;
  }

  p > code {
    color: #000 !important;
    border-radius: 3px;
    padding: 3px 5px;
    box-shadow: 0 5px 15px #eee;
  }

  article.post {
    margin-bottom: 2em;

    .post-title {
      font-size: 1.1em;
      font-weight: bold;
      margin-top: 1em;
      a {
        color: #000;
      }
    }

    div.entry {

      p {
        margin: 1.5em 0;
      }

      h3 {
        margin-top: 1.5em;
        font-size: 1.1em;
        font-weight: bold;
      } 

      blockquote {
        p {
          margin: 0;
          line-height: 1.6em;
        }
        border-left: 2px solid $gray;
        padding: 1em;
        font-size: 0.9em;
        box-shadow: 0 5px 15px #eee;
      }

      ul > li {
        margin: 0.5em 0;

        p {
          margin: 0.5em 0;
        }
      }
    }

    div.date {
      font-size: 0.8em;
      margin: 0.6em 0;
      color: #aaa;
    }

    .commentBox {
      text-align: center;
      padding: 1em 0;
    }
  }

  pre {
    border: 1px solid #eee;
    padding: 1em;
    box-shadow: 0 5px 15px #eee;
    border-radius: 3px;
    
    highlight {
      padding: 1em;
      margin-bottom: 1em;
    }
  }

  code {
    font-family:'Bitstream Vera Sans Mono',
    'Courier',
    monospace;
  }

}

.pagination {
  margin: 1em 0;
  .page {
    // border: 1px solid #ddd;
    margin-top: 0.5em;
    padding: 1em;
    text-align: center;
    background-color: aliceblue;
    border-radius: 7px;
  }
}

div.about {
  margin: 1em;
  padding-bottom: 1em;
  img {
    max-width:175px;
    max-height:175px;
    width: auto;
    height: auto;
    border: 1px solid #ddd;
  }
}

div.book {
  margin: 2em 0;
  
  img {
      max-width:200px;
      max-height:200px;
  }
}

div.random {
  margin: 1em 0;

  img {
      max-width:100%;
      max-height:100%;
      border-radius: 5px;
  }
}

div.gallery {
   min-height: 800px;
  .snap {
    display: inline-block;
    img {
      max-width: 205px;
      max-height: 200px;
    }
  }

  .desc {
    margin: 0.5em 0;
    text-align: center;
    font-size: 0.7em;
  }
}

.caption {
  margin-top: 0.5em;
  font-size: 0.8em;
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

footer {
  margin: 1em;
  clear: both;
  text-align: center;

  .svg-icon {
    margin-right: 5px;
  }
}

section.tags {
  margin: 1em;

  div.tag-container {
	  margin-top: 1.5em;
    div.tag-name {
		margin: 0.5em 0;
      font-size: 1.3em;
      font-weight: bold;
    }
    div.tagged-posts {
		font-size: 0.9em;
	}
  }
}

section.archive {
  margin: 1em;
  div.month {
    margin: 0.5em 1em;
    font-size: 1.1em;
    font-weight: bold;
  }
  ul {
    margin: 1em;
    li {
      margin: 0.1em;
    }
  }
}

section.books {
  div.summary {
    margin: 1em 0;
    background-color: lightyellow;
    padding: 1em;
    font-size: 0.8em;
  }
}

section.blog {
}

// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "highlights";
@import "svg-icons";

div:target {
  background-color: lightyellow;
}

